--- a/src/app/modules/admin/modules/register/register.component.html
+++ b/src/app/modules/admin/modules/register/register.component.html
@@ -1,4 +1,4 @@
-<h1 align="center">Administrador</h1>
+<h1 style="text-align: center;">Administrador</h1>
 <mat-card class="example-card">
 	<mat-card-header justify-content:center align-items:center>
 		<mat-card-title>Registro</mat-card-title>
@@ -8,26 +8,26 @@
 			<div class="row">
 				<div class="col">
 					<label for="exampleFormControlInput1">Usuario</label>
-					<input type="text" formControlName="nombre" class="form-control" placeholder="Usuario">
-    </div>
-					<div class="col">
-						<label for="exampleFormControlInput1">Tipo de usuario</label>
-						<select class="form-control" formControlName="Tipo">
-        <option>Auditor</option>
-        <option>Empresa</option>
-</select>
-					</div>
+					<input type="text" formControlName="mail" class="form-control" placeholder="Usuario">
+    			</div>
+				<div class="col">
+					<label for="exampleFormControlInput1">Tipo de usuario</label>
+					<select class="form-control" formControlName="tipo">
+        				<option>Auditor</option>
+        				<option>Empresa</option>
+					</select>
 				</div>
-				&nbsp;
-				&nbsp;
-				<div class="form-group">
-					<label for="exampleFormControlInput1">Contraseña</label>
-					<input type="password" class="form-control" formControlName="direccion" id="exampleFormControlInput1" placeholder="Contraseña">
-  </div>
+			</div>
+			&nbsp;
+			&nbsp;
+			<div class="form-group">
+				<label for="exampleFormControlInput1">Contraseña</label>
+				<input type="password" class="form-control" formControlName="password" id="exampleFormControlInput1" placeholder="Contraseña">
+  			</div>
 		</form>
 	</mat-card-content>
     <mat-card-actions style="text-align:center">
-        <button mat-button >Registrar</button>
+        <button mat-button (click)="createUser()" >Registrar</button>
         &nbsp;
         &nbsp;
         <button mat-button >Actualizar</button>
